# market-research

./: README.md  pyproject.toml  report_creator_flow.html  test.py
knowledge/: feeds.json  report_meta.json
output/: complete_report.md
src/market_research_flow/: main.py
src/market_research_flow/crews/article_scraper_crew/: article_scraper_crew.py
src/market_research_flow/crews/article_scraper_crew/config/: agents.yaml  tasks.yaml
src/market_research_flow/crews/content_crew/: content_crew.py
src/market_research_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
src/market_research_flow/tools/: fetch_rss_tool.py
